tests/reference/asr-template_error_05-85bce3c.stderr
semantic error: Restriction type mismatch with provided function argument
  --> tests/errors/template_error_05.f90:34:9
   |
34 |         instantiate add_t(real, func_arg_real), only: add_real => add_generic
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
   |
 8 |            function F(x, y) result(z)
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
11 |            end function
   | ...^^^^^^^^^^^^^^^^^^^^^ Restriction's return type real
   |
28 |        integer function func_arg_real(x, y) result(z)
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
...
   |
32 |    
   | ...^ Function's return type integer
